test/data/syntax-errors/missing-commas-in-fun-call.roo
fun gcd(a, b) {
  if b is 0 {
    return a
  } else { 
    return gcd(b a%b)
  }
}